--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,8 +42,8 @@
     </div>
   </div>
   <hr>
-  <div class="container">
-    <div class="row">
+  
+  <div class="row">
       <div class="col-xs-12">
         <h1>Basics Assignment 3 - Directives</h1>
         <ol>
@@ -55,15 +55,34 @@
         </ol>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs12">
-          <app-directives></app-directives>
-      </div>
+  <div class="row">
+    <div class="col-xs12">
+        <app-directives></app-directives>
     </div>
   </div>
+  
   <hr>
 
-
-  
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>Basics Assignment 4 - Bind it!</h1>
+      <ol>
+        <li>Create three new components: GameControl, Odd and Even</li>
+        <li>The GameControl Component should have buttons to start and stop the game</li>
+        <li>When starting the game, an event (holding a incrementing number) 
+          should get emitted each second (ref = setInterval())</li>
+        <li>The event should be listenable from outside the component</li>
+        <li>When stopping the game, no more events should get emitted (clearInterval(ref))</li>
+        <li>A new Odd component should get created for every odd number emitted, the same should happen for the Even Component (on even numbers)</li>
+        <li>Simply output Odd - NUMBER or Even - NUMBER in the two components</li>
+        <li>Style the element (e.g. paragraph) holding your output text differently in both components</li>
+      </ol>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs12">
+        <app-cmp-binding></app-cmp-binding>
+    </div>
+  </div>
 </div>
 
