--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h1>Basics Assignment 1 - Components</h1>
+      <h1>Assignment 1 - Components</h1>
       <ol>
         <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
         <li>Output them beneath each other in the AppComponent</li>
@@ -26,7 +26,7 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <h1>Basics Assignment 2 - Data binding</h1>
+      <h1>Assignment 2 - Data binding</h1>
       <ol>
         <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
         <li>Output the username property via String Interpolation (in a paragraph below the input)</li>
@@ -45,7 +45,7 @@
   
   <div class="row">
       <div class="col-xs-12">
-        <h1>Basics Assignment 3 - Directives</h1>
+        <h1>Assignment 3 - Directives</h1>
         <ol>
           <li>Add A button which says 'Display Details'</li>
           <li>Add a paragraph with any content of your choice (e.g. 'Secret Password = tuna')</li>
@@ -65,7 +65,7 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <h1>Basics Assignment 4 - Bind it!</h1>
+      <h1>Assignment 4 - Bind it!</h1>
       <ol>
         <li>Create three new components: GameControl, Odd and Even</li>
         <li>The GameControl Component should have buttons to start and stop the game</li>
@@ -83,6 +83,25 @@
     <div class="col-xs12">
         <app-cmp-binding></app-cmp-binding>
     </div>
+  </div>
+
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>Assignment 5 - Services and Dependency Injection</h1>
+      <app-active-users
+        [users]="activeUsers"
+      ></app-active-users>
+      <app-inactive-users
+        [users]="inactiveUsers"
+      ></app-inactive-users>
+    </div>
+    <!--
+      Optimize this app by adding a UsersService which manages the active and inactive users.
+
+      Also add a CounterService which counts the number of active->inactive and inactive->active actions.
+    -->
+    
   </div>
 </div>
 
