--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <h1>Assignment 1 - Components</h1>
       <ol>
         <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
@@ -12,20 +12,21 @@
       <p>Feel free to create more components, nest them into each other or play around with different types of selectors!</p>
     </div>
   </div>
-  <h2>Solution</h2>
+  
   <div class="row">
-    <div class="col-xs-12 alert alert-warning">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2 alert alert-warning">
+      <h2>Solution</h2>
       <app-warning-alert></app-warning-alert>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 alert alert-success">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2 alert alert-success">
       <app-success-alert></app-success-alert>
     </div>
   </div>
   <hr>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <h1>Assignment 2 - Data binding</h1>
       <ol>
         <li>Add a Input field which updates a property ('username') via Two-Way-Binding</li>
@@ -35,16 +36,17 @@
       </ol>
     </div>
   </div>
-  <h2>Solution</h2>
+  
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <h2>Solution</h2>
       <app-data-binding></app-data-binding>
     </div>
   </div>
   <hr>
   
   <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
         <h1>Assignment 3 - Directives</h1>
         <ol>
           <li>Add A button which says 'Display Details'</li>
@@ -56,7 +58,7 @@
       </div>
     </div>
   <div class="row">
-    <div class="col-xs12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
         <app-directives></app-directives>
     </div>
   </div>
@@ -64,7 +66,7 @@
   <hr>
 
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <h1>Assignment 4 - Bind it!</h1>
       <ol>
         <li>Create three new components: GameControl, Odd and Even</li>
@@ -80,14 +82,14 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-xs12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
         <app-cmp-binding></app-cmp-binding>
     </div>
   </div>
 
   <hr>
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <h1>Assignment 5 - Services and Dependency Injection</h1>
       <app-active-users
         [users]="activeUsers"
@@ -103,5 +105,27 @@
     -->
     
   </div>
+
+  <hr>
+  <div class="row">
+      <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+        <h1>Assignment 6 - Template driven forms</h1>
+        
+        <!-- Add a Form with the following Inputs (and Validators)
+             1) Mail address (should not be empty and should be an email address)
+             2) A Dropdown which allows the user to select from three different Subscriptions ("Basic", "Advanced", "Pro")
+                Set "Advanced" as Default
+             3) A Password field (should not be empty)
+             4) A Submit Button
+  
+             Display a warning message if the Form is invalid AND was touched. Display a warning message below each input if it's invalid.
+  
+             Upon submitting the form, you should simply print the Value of the Form to the Console.
+             Optionally, display it in your template.
+        -->
+        <app-td-forms></app-td-forms>
+      </div>
+  </div>
+  
 </div>
 
