--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -149,4 +149,12 @@
   </div>
   
 </div>
+<hr>
+<div class="row">
+  <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <h1>Assignment 8 - Transform with Pipe</h1>
+    <app-transform-with-pipe></app-transform-with-pipe>
+  </div> 
+
+</div>
 
